Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17137

QtScript application crash on ReferenceError in an Array.forEach() call

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.7.2
    • 4.6.0, 4.7.1
    • Qt Script
    • None
    • Windows
    • 147df10403ba280b3f04c1e3d6c4b1cf386abe5d 640436345645b6cf6ff3334399f33c9d1c089492

      The application crash when a QtScriptEngineDebugger is attached on a ReferenceError when this happens into an Array.forEach() call. See attachment for POC.

      keywords: script tools debugger QtScript forEach Array ReferenceError

        1. script-foreach.rar
          0.5 kB
          COLE Edouard
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kenthans Kent Hansen (Inactive)
            ed COLE Edouard
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes