Don't crash when creating backtrace for built-in JS function

When the JIT is enabled, NativeFunctionWrapper (used for
built-in functions such as Array.prototype.forEach) inherits
JSFunction, so we must check whether the function is
actually a JS (script) function before we start accessing
script-specific properties.

Task-number: QTBUG-17137
Reviewed-by: Olivier Goffart